--- a/static/test01.html
+++ b/static/test01.html
@@ -6,7 +6,8 @@
         content="width=device-width,initial-scale=1.0,user-scalable=no">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="./css/index.css">
-    <title>e宠</title>
+  <link rel="stylesheet" href="http://at.alicdn.com/t/font_590388_hq64uyzsbgrs5rk9.css">
+  <title>e宠</title>
 </head>
 <body>
 <div id="app">
@@ -22,27 +23,24 @@
     <!--导航-->
     <div class="guide">
 
-        <!--左侧地理位置-->
-        <span class="wenzi">狗狗</span>
-        <span class="wenzi">|</span>
-        <span class="wenzi">重庆</span>
-        <!--小三角-->
-        <span class="guide_item">
-          <span class="item_icon">
-            <i class="iconfont icon-sanjiao"></i>
-          </span>
-        </span>
+        <div class="petcity">
+          <!--左侧地理位置-->
+          <span class="wenzi">狗狗</span>
+          <span class="wenzi">|</span>
+          <span class="wenzi">重庆</span>
+        </div>
 
-        <!--中间搜索框-->
-        <input class="search" type="text" placeholder="搜索商品和品牌">
 
-        <!--右侧icon放大镜-->
-        <span class="guide_item">
-          <span class="item_icon">
-            <i class="iconfont icon-xiaoxi"></i>
-          </span>
-        </span>
+        <div class="searchs">
+          <!--中间搜索框-->
+          <input type="text" disabled="disabled" placeholder="搜索商品和品牌">
+          <i class="searchInput iconfont icon-search"></i>
+        </div>
 
+        <!--右侧icon消息-->
+        <div class="msg-box">
+          <i class="iconfont icon-msg"></i>
+        </div>
     </div>
   </div>
 </div>
